--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,8 @@
         <activity android:name=".views.activities.shipper.AuthCenterActivity"
                   android:screenOrientation="portrait"/>
 
+        <activity android:name=".views.activities.SelectRoleActivity"
+            android:screenOrientation="portrait"/>
         <!--umeng-->
         <meta-data android:name="UMENG_APPKEY" android:value="5847adb94544cb770a0012ad"/>
         <meta-data android:name="UMENG_CHANNEL" android:value="${TD_CHANNEL_ID}"/>
