--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,6 @@ android {
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -24,8 +23,8 @@ android {
 
     freeline {
         hack true
-        productFlavor "normal"
-        autoDependency false
+        productFlavor "develop"
+        //autoDependency false
     }
 
     productFlavors {
