--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
                   android:screenOrientation="portrait"/>
 
         <activity android:name=".views.activities.shipper.MainActivity"
+                  android:launchMode="singleTop"
                   android:screenOrientation="portrait"/>
 
         <activity android:name=".views.activities.shipper.AuthCenterActivity"
