--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,13 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     compile 'io.reactivex:rxandroid:1.2.1'
+
+    compile ('com.squareup.retrofit2:converter-simplexml:2.1.0'){
+        exclude group: 'stax', module: 'stax-api'
+        exclude group: 'stax', module: 'stax'
+        exclude group: 'xpp3', module: 'xpp3'
+    }
+
     //依赖注入
     compile 'com.google.dagger:dagger:2.4'
     provided 'com.google.dagger:dagger-compiler:2.4'
@@ -84,4 +91,7 @@ dependencies {
 
     //轮播
     compile 'com.bigkoo:convenientbanner:2.0.5'
+
+    //选择相册
+    compile 'cn.finalteam:galleryfinal:1.4.8.7'
 }
