--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,9 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    //use legacy for for android 6.0
+    useLibrary 'org.apache.http.legacy'
+
 }
 
 dependencies {
@@ -94,4 +97,8 @@ dependencies {
 
     //选择相册
     compile 'cn.finalteam:galleryfinal:1.4.8.7'
+
+    //环信
+    compile 'com.google.android.gms:play-services-gcm:9.4.0'
+    compile 'com.hyphenate:hyphenate-sdk:3.2.3'
 }
