--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,6 +69,37 @@
         <activity android:name=".views.activities.driver.AddGasolineActivity"
                   android:screenOrientation="portrait"/>
 
+        <activity android:name=".views.activities.CarTeamActivity"
+                  android:screenOrientation="portrait"/>
+
+        <activity android:name=".views.activities.shipper.OrdersActivity"
+                  android:screenOrientation="portrait"/>
+
+        <activity android:name=".views.activities.NewsActivity"
+                  android:screenOrientation="portrait"/>
+
+
+
+        <!-- 设置环信应用的AppKey -->
+        <meta-data android:name="EASEMOB_APPKEY"  android:value="1109160921115205#glgjapp" />
+        <!-- 声明SDK所需的service SDK核心功能-->
+        <service android:name="com.hyphenate.chat.EMChatService" android:exported="true"/>
+        <service android:name="com.hyphenate.chat.EMJobService"
+                 android:permission="android.permission.BIND_JOB_SERVICE"
+                 android:exported="true"/>
+        <!-- 声明SDK所需的receiver -->
+        <receiver android:name="com.hyphenate.chat.EMMonitorReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.PACKAGE_REMOVED"/>
+                <data android:scheme="package"/>
+            </intent-filter>
+            <!-- 可选filter -->
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.USER_PRESENT" />
+            </intent-filter>
+        </receiver>
+
         <!--umeng-->
         <meta-data android:name="UMENG_APPKEY" android:value="5847adb94544cb770a0012ad"/>
         <meta-data android:name="UMENG_CHANNEL" android:value="${TD_CHANNEL_ID}"/>
